cabal-version:       2.0
name:                advent-of-code
version:             0.0.0
synopsis:            Advent of Code 2020
description:         Advent of Code 2020
homepage:            https://github.com/Avery/advent-of-code
bug-reports:         https://github.com/Avery/advent-of-code/issues
license:             MIT
license-file:        LICENSE
author:              PPK
maintainer:          thecommunistduck@hotmail.co.uk
copyright:           2020 PPK
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/Avery/advent-of-code.git

library
  hs-source-dirs:      src
  exposed-modules:     AdventOfCode
                       Prelude

  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable advent-of-code
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude ^>= 4.12.0.0
                     , advent-of-code
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
