cabal-version:       2.4
name:                advent-of-code
version:             0.0.0.0
synopsis:            
description:         
homepage:            https://github.com/PPKFS/advent-of-code-2020
bug-reports:         
license:             MIT
license-file:        LICENSE
author:              Avery
maintainer:          Avery <thecommunistduck@hotmail.co.uk>
copyright:           2020 Avery
category:            
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/PPKFS/advent-of-code-2020.git

common common-options
  build-depends:       base-noprelude ^>= 4.13.0.0
                     , relude
                      , attoparsec
                      , base >=4.7 && <5
                      , containers
                      , directory
                      , mtl
                      , optparse-applicative
                      , parser-combinators
                      , pointedlist
                      , text
                      , vector
  ghc-options:         
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       ---ddump-splices
                       ---ddump-to-file
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       

  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude OverloadedStrings MultiParamTypeClasses RankNTypes FlexibleContexts TemplateHaskell FlexibleInstances FunctionalDependencies RecordWildCards ConstraintKinds KindSignatures DataKinds GADTs DataKinds DefaultSignatures EmptyCase ExistentialQuantification ScopedTypeVariables StandaloneKindSignatures ScopedTypeVariables MultiWayIf LambdaCase QuasiQuotes TupleSections

library
  import:
    common-options
  exposed-modules:
      Days.Day01
      Days.Day02
      Days.Day03
      Days.Day04
      Days.Day05
      Days.Day06
      Days.Day07
      Days.Day08
      Days.Day09
      Days.Day10
      Days.Day11
      Days.Day12
      Days.Day13
      Days.Day14
      Days.Day15
      Days.Day16
      Days.Day17
      Days.Day18
      Days.Day19
      Days.Day20
      Days.Day21
      Days.Day22
      Days.Day23
      Days.Day24
      Days.Day25
      Program.RunDay
      Util.Parsers
      Util.Util
  other-modules: Prelude
  hs-source-dirs:
      src

  default-language: Haskell2010

executable advent-of-code
  import:
    common-options
  main-is: Main.hs
  build-depends: advent-of-code
  hs-source-dirs:
      app
  default-extensions: EmptyCase FlexibleContexts FlexibleInstances InstanceSigs MultiParamTypeClasses LambdaCase MultiWayIf RecordWildCards TupleSections OverloadedStrings ScopedTypeVariables GADTs NumericUnderscores DeriveFunctor DeriveFoldable
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010